k8s/next-client-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: next-client-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: next-client
  ports:
    - port: 3000
      targetPort: 3000
