k8s/node-server-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: node-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: node-server
  ports:
    - port: 80
      targetPort: 80
